--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -101,8 +101,11 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url: jdbc:postgresql://127.0.0.1:5432/imagen
+            driverClassName: org.postgresql.Driver
+            username: postgres
+            password: viewsonic
     test:
         dataSource:
             dbCreate: update
